--- a/table-pay/app/src/main/res/layout/fragment_owner_home.xml
+++ b/table-pay/app/src/main/res/layout/fragment_owner_home.xml
@@ -6,11 +6,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/lottie"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:lottie_fileName="splash.json" />
+        <ImageView
+            android:id="@+id/ownerHomeLottie"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/logo"
+            app:layout_constraintBottom_toTopOf="@id/ownerMenuRecyclerView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/ownerMenuRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="36dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ownerHomeLottie"
+            app:spanCount="3" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
